# Dynamic_Fusion

./: .env  .gitattributes  .gitignore  CONTEXT_SUMMARY.md  main.py  multigraph_5samples.py  pyproject.toml
Dataset/: BERT_text_data.py  ETH.py  ETH_GBert.py  Expert_Fea_Projector.py  adjust_matrix.py  dataset0.py  dataset1.py  dataset10.py  dataset11.py  dataset2.py  dataset3.py  dataset4.py  dataset5.py  dataset6.py  dataset7.py  dataset8.py  dataset9.py  env_config.py  feature_pipeline.py  run_train1.sh  select_add_features.py  select_engineer_features.py  shared_sampling.py  train0.py  train1.1.py  train1.py  train1_ddp.py  utils.py
Dataset/dfrequirements.txt/: main.py  pyproject.toml
data/preprocessed/Multigraph/: adjusted_transactions4.pkl  dev.tsv  dev2.tsv  test.tsv  test2.tsv  transactions1.pkl  transactions10.pkl  transactions2.pkl  transactions3.pkl  transactions5.pkl  transactions6.pkl  transactions7.pkl  transactions8.pkl  transactions9.pkl  weighted_adjacency_matrix.pkl  x3_projected_128dim.pt  x3_projected_768dim.pt
data/preprocessed/multi_processed_data/: data_Dataset.address_to_index  data_Dataset.labels  data_Dataset.test_y  data_Dataset.test_y_prob  data_Dataset.tfidf_list  data_Dataset.train_y  data_Dataset.train_y_prob  data_Dataset.valid_y  data_Dataset.valid_y_prob  data_Dataset.y  data_Dataset.y_prob
raw_data/B4E/: gitattributes  phisher_account.txt
raw_data/MulDiGraph/: feature_pipeline.py  features_output0.csv  features_output1.csv  features_output_split.csv  features_output_top10.csv  meta_train.csv  phisher_accounts.txt
