[project]
name = "dynamic-feature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pytorch-pretrained-bert>=0.6.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
